--- a/src/index.css
+++ b/src/index.css
@@ -123,22 +123,23 @@ p {
 
 .btn {
   text-transform: uppercase;
-  background: var(--clr-primary-5);
+  background: purple;
   color: var(--clr-white);
   padding: 0.375rem 0.75rem;
   letter-spacing: var(--spacing);
   display: block;
   transition: var(--transition);
   font-size: 0.875rem;
-  border: 2px solid var(--clr-primary-5);
+  border: 2px solid black;
+  border-radius: 20px;
   cursor: pointer;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   border-radius: var(--radius);
 }
 .btn:hover {
-  color: var(--clr-primary-5);
-  background: var(--clr-primary-1);
-  border-color: var(--clr-primary-1);
+  color: white;
+  background: palevioletred;
+  border-color: pink;
 }
 /* section */
 .section {
